Updates with css file for login

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -49,7 +49,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         <a class="nav-link" href="/pages/search-books.html">Search Books</a>
                     </li>
                     
-                    <!--THESE FEATURES ONLY WILL BE VISIBLE AFTER LOGIN -->
+                    <!--THESE FEATURES ONLY WILL BE VISIBLE AFTER LOGIN with extra remark class="nav-item auth-required"-->
                     
                     <!-- List a Book -->
                     <li class="nav-item auth-required" style="display: none;">
