modified badge notifications

--- a/src/main/resources/static/pages/my-books.html
+++ b/src/main/resources/static/pages/my-books.html
@@ -33,7 +33,7 @@
                         <li class="nav-item auth-required" style="display:none;"><a class="nav-link" href="/pages/list-book.html">List a Book</a></li>
                         <li class="nav-item auth-required" style="display:none;" ><a class="nav-link position-relative" href="/pages/my-received-requests.html">My Received Requests<span id="received-requests-badge" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="display: none; font-size: 0.6em;">0</span></a></li>
                         <li class="nav-item auth-required" style="display:none;" ><a class="nav-link position-relative" href="/pages/my-sent-requests.html">My Sent Requests<span id="sent-requests-badge" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="display: none; font-size: 0.6em;">0</span></a></li>
-                        <li class="nav-item auth-required" style="display:none;" ><a class="nav-link" href="/pages/chat.html">Chat</a></li>
+                        <li class="nav-item auth-required" style="display:none;" ><a class="nav-link position-relative" href="/pages/chat.html">Chat<span id="chat-badge" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="display: none; font-size: 0.6em;">0</span></a></li>
         
                     </ul>
                     
