--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -74,7 +74,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     
                     <!-- Chat -->
                     <li class="nav-item auth-required" style="display: none;">
-                        <a class="nav-link" href="/pages/chat.html">Chat</a>
+                        <a class="nav-link position-relative" href="/pages/chat.html">Chat<span id="chat-badge" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="display: none; font-size: 0.6em;">0</span></a>
                     </li>
                     
 
