changed banner photo, metadata

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,13 +8,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Read It. Swap It. Love It.">
-        <meta name="keywords" content="book exchange, book swap, book swap app, book swap platforms">
+        <meta name="description" content="Your neighbor personal library.">
+        <meta name="keywords" content="library, give away book, book lending, book exchange, book swap, book swap app, book swap platforms, library app, nearby library, nearby books">
         <meta name="robots" content="index,follow">
         <meta name="googlebot" content="index,follow">
 
         <!-- Page Title & Favicon -->
-        <title>BookBuddy - Your Neighborhood Book Exchange Platform</title>	
+        <title>BookBuddy - Your Neighborhood Personal Library</title>	
         <link rel="icon" href="/images/bookbuddy_logo.png" type="image/png">
 
         <!-- Add bootstrap -->
@@ -114,7 +114,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <!-- Static Banner -->
     <div class="banner-container position-relative text-center">
         <a href="/pages/search-books.html">
-            <img src="/images/book-swap.jpg" class="img-fluid w-100" alt="BookBuddy Banner">
+            <img src="/images/book-swap.png" class="img-fluid w-100" alt="BookBuddy Banner">
         </a>
     </div>
 
