--- a/src/main/resources/static/pages/login.html
+++ b/src/main/resources/static/pages/login.html
@@ -8,7 +8,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Login to BookBuddy - Your Neighborhood Book Exchange Platform">
+        <meta name="keywords" content="library, give away book, book lending, book exchange, book swap, book swap app, book swap platforms, library app, nearby library, nearby books">
         <meta name="keywords" content="book exchange, book swap, login">
         <meta name="robots" content="index,follow">
         <meta name="googlebot" content="index,follow">
