--- a/src/main/resources/static/pages/list-book.html
+++ b/src/main/resources/static/pages/list-book.html
@@ -8,6 +8,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Read It. Swap It. Love It.">
+        <meta name="keywords" content="library, give away book, book lending, book exchange, book swap, book swap app, book swap platforms, library app, nearby library, nearby books">
+        <meta name="robots" content="index,follow">
+        <meta name="googlebot" content="index,follow">
+        
         <title>List a Book - BookBuddy</title>
         <link rel="icon" href="/images/bookbuddy_logo.png" type="image/png">
 
