--- a/src/main/resources/static/pages/chat.html
+++ b/src/main/resources/static/pages/chat.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Read It. Swap It. Love It.">
-    <meta name="keywords" content="library, give away book, book lending, book exchange, book swap, book swap app, book swap platforms, library app, nearby library, nearby books">
-    <meta name="robots" content="index,follow">
-    <meta name="googlebot" content="index,follow">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Your neighbor personal library.">
+        <meta name="keywords" content="library, give away book, book lending, book exchange, book swap, book swap app, book swap platforms, library app, nearby library, nearby books">
+        <meta name="robots" content="index,follow">
+        <meta name="googlebot" content="index,follow">
     
     <title>Chat - BookBuddy</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
