--- a/src/main/resources/static/pages/my-received-requests.html
+++ b/src/main/resources/static/pages/my-received-requests.html
@@ -70,7 +70,7 @@
         <div class="container mt-4 mb-5">
             <div class="row justify-content-center">
                 <div class="col-md-10">
-                    <div class="card shadow">
+                    <div class="card">
                         <div class="card-header bg-success text-white">
                             <h4 class="mb-0">📥 My Received Requests</h4>
                             <small>Review and respond to requests for your books</small>
