--- a/src/main/resources/static/pages/my-books.html
+++ b/src/main/resources/static/pages/my-books.html
@@ -70,8 +70,8 @@
         <div class="container mt-4 mb-5">
             <div class="row">
                 <div class="col-12">
-                    <div class="card shadow">
-                        <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
+                    <div class="card">
+                        <div class="card-header bg-success text-white d-flex justify-content-between align-items-center">
                             <div>
                                 <h4 class="mb-0">📚 My Books</h4>
                                 <small>Manage your listed books</small>
