--- a/src/main/resources/static/pages/my-sent-requests.html
+++ b/src/main/resources/static/pages/my-sent-requests.html
@@ -70,8 +70,8 @@
         <div class="container mt-4 mb-5">
             <div class="row justify-content-center">
                 <div class="col-md-10">
-                    <div class="card shadow">
-                        <div class="card-header bg-primary text-white">
+                    <div class="card">
+                        <div class="card-header bg-success text-white">
                             <h4 class="mb-0">📤 My Sent Requests</h4>
                             <small>Track the status of your book requests</small>
                         </div>
