--- a/src/main/resources/static/pages/profile.html
+++ b/src/main/resources/static/pages/profile.html
@@ -70,8 +70,8 @@
         <div class="container mt-4 mb-5">
             <div class="row justify-content-center">
                 <div class="col-md-8 col-lg-6">
-                    <div class="card shadow">
-                        <div class="card-header bg-primary text-white">
+                    <div class="card">
+                        <div class="card-header bg-success text-white">
                             <h4 class="mb-0">👤 My Profile</h4>
                             <small>Manage your account information</small>
                         </div>
