--- a/src/main/resources/static/pages/search-books.html
+++ b/src/main/resources/static/pages/search-books.html
@@ -71,8 +71,8 @@
         <div class="container mt-4 mb-5">
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <div class="card shadow">
-                        <div class="card-header bg-primary text-white">
+                    <div class="card">
+                        <div class="card-header bg-success text-white">
                             <h4 class="mb-0">Search Books</h4>
                             <small>Find books available for swap in your area</small>
                         </div>
@@ -97,11 +97,14 @@
                                     <div class="col-md-3">
                                         <label for="radiusFilter" class="form-label">Radius (km)</label>
                                         <select class="form-select" id="radiusFilter">
+                                            <option value="all">All books</option>
                                             <option value="5">5 km</option>
                                             <option value="10">10 km</option>
                                             <option value="25">25 km</option>
                                             <option value="50">50 km</option>
+                                            <option value="exceed">Exceed 50 km</option>
                                         </select>
+                                        <div class="form-text">Select distance range, "All books" to search everywhere, or "Exceed 50 km" for books beyond 50km</div>
                                     </div>
                                 </div>
                                 <div class="row mt-3">
@@ -290,8 +293,26 @@
                 url += '&sharingType=' + encodeURIComponent(sharingType);
             }
             
+            // Handle location-based search
             if (userLocation) {
-                url += `&lat=${userLocation.lat}&lng=${userLocation.lng}&radius=${radius}`;
+                if (radius === 'exceed' || radius === 'all') {
+                    // For "exceed 50 km" or "all books", don't include radius parameter to get all books
+                    url += `&lat=${userLocation.lat}&lng=${userLocation.lng}`;
+                } else {
+                    // For specific radius, include the radius parameter
+                    url += `&lat=${userLocation.lat}&lng=${userLocation.lng}&radius=${radius}`;
+                }
+            } else {
+                // If no user location but "exceed 50 km" or "all books" is selected, search without location
+                if (radius === 'exceed' || radius === 'all') {
+                    // Search all books without location filter
+                    console.log('Searching all books without location filter');
+                } else {
+                    // If no user location, show message to use location
+                    document.getElementById('searchResults').innerHTML = 
+                        '<div class="alert alert-info">📍 Please use "Use My Location" button to search by radius, or select "All books" to search everywhere.</div>';
+                    return;
+                }
             }
             
             fetch(url)
@@ -553,7 +574,7 @@
                             <div class="card-body">
                                 <div class="d-flex justify-content-between align-items-start mb-2">
                                     <h6 class="card-title mb-0">${book.title}</h6>
-                                    <span class="badge bg-primary">${sharingTypeDisplay}</span>
+                                    <span class="badge bg-success">${sharingTypeDisplay}</span>
                                 </div>
                                 <h6 class="card-subtitle mb-2 text-muted">${book.author}</h6>
                                 ${book.genre ? `<p class="card-text"><small class="text-muted">Genre: ${book.genre}</small></p>` : ''}
