--- a/src/main/resources/static/pages/user-profile.html
+++ b/src/main/resources/static/pages/user-profile.html
@@ -71,8 +71,8 @@
             <div class="row justify-content-center">
                 <div class="col-md-10">
                     <!-- User Profile Header -->
-                    <div class="card shadow mb-4">
-                        <div class="card-header bg-primary text-white">
+                    <div class="card mb-4">
+                        <div class="card-header bg-success text-white">
                             <h4 class="mb-0">👤 User Profile</h4>
                         </div>
                         <div class="card-body">
@@ -86,7 +86,7 @@
                     </div>
                     
                     <!-- User's Books -->
-                    <div class="card shadow">
+                    <div class="card">
                         <div class="card-header bg-success text-white">
                             <h4 class="mb-0">📚 Available Books</h4>
                             <small id="bookCount">Loading...</small>
