--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -84,7 +84,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     
                     <!-- BEFORE LOGIN WILL SHOW AS -->
                     <div id="auth-buttons" class="auth-buttons">
-                        <a href="/pages/login.html" class="btn btn-outline-primary me-2">Login</a>
+                        <a href="/pages/login.html" class="btn btn-success me-2">Login</a>
                         <a href="/pages/register.html" class="btn btn-primary">Sign Up</a>
                     </div>
                     
