--- a/src/main/resources/static/pages/search-books.html
+++ b/src/main/resources/static/pages/search-books.html
@@ -46,7 +46,7 @@
                     <!-- Auth button-->
                     <div class="d-flex">
                         <div id="auth-buttons" class="auth-buttons">
-                            <a href="/pages/login.html" class="btn btn-outline-primary me-2">Login</a>
+                            <a href="/pages/login.html" class="btn btn-success me-2">Login</a>
                             <a href="/pages/register.html" class="btn btn-primary me-2">Sign Up</a>
                         </div>
                         
