--- a/src/main/resources/static/pages/list-book.html
+++ b/src/main/resources/static/pages/list-book.html
@@ -211,7 +211,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 
                                 <!--submit button-->
                                 <div class="d-grid">
-                                    <button type="submit" class="btn btn-primary btn-lg" id="submitBtn">
+                                    <button type="submit" class="btn btn-success btn-lg" id="submitBtn">
                                         📚 List My Book
                                     </button>
                                 </div>
@@ -612,7 +612,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             document.querySelectorAll('.invalid-feedback').forEach(el => el.textContent = '');
         }
         </script>
-        
+
         <!-- Footer -->
         <section class="bg-light text-dark">
             <div class="container mt-3">
@@ -640,5 +640,5 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
               </div>
             </div>
         </section>
-    </body>
+</body>
 </html>
