--- a/src/main/resources/static/pages/login.html
+++ b/src/main/resources/static/pages/login.html
@@ -37,7 +37,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <!-- Logo Section -->
                 <div class="logo-section">
                     <img src="/images/bookbuddy_logo.png" alt="BookBuddy Logo">
-                    <h3 class="text-primary mb-2">Welcome Back!</h3>
+                    <h3 class="text-success mb-2">My Account</h3>
                     <p class="text-muted">Sign in to your BookBuddy account</p>
                 </div>
                 
@@ -92,7 +92,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <!-- Additional Links -->
                 <div class="additional-links">
                     <p class="mb-0">Don't have an account? 
-                        <a href="/pages/register.html" class="text-primary text-decoration-none fw-bold">Sign up here</a>
+                        <a href="/pages/register.html" class="text-success text-decoration-none fw-bold">Sign up here</a>
                     </p>
                 </div>
                 
