--- a/src/main/resources/static/pages/my-received-requests.html
+++ b/src/main/resources/static/pages/my-received-requests.html
@@ -152,7 +152,7 @@
                 container.innerHTML = `
                     <div class="text-center text-muted">
                         <p>You haven't received any requests yet.</p>
-                        <a href="/pages/my-books.html" class="btn btn-primary">View My Books</a>
+                        <a href="/pages/my-books.html" class="btn btn-success">View My Books</a>
                     </div>
                 `;
                 return;
@@ -232,7 +232,7 @@
             
             if (request.status === 'ACCEPTED') {
                 buttons += `
-                    <button class="btn btn-sm btn-primary me-2" onclick="openChat(${request.id})">💬 Open Chat</button>
+                    <button class="btn btn-sm btn-success me-2" onclick="openChat(${request.id})">💬 Open Chat</button>
                     <button class="btn btn-sm btn-info" onclick="completeRequest(${request.id})">✅ Mark Complete</button>
                 `;
             }
