--- a/src/main/resources/static/pages/profile.html
+++ b/src/main/resources/static/pages/profile.html
@@ -119,7 +119,7 @@
                                     
                                     <!-- Submit Button -->
                                     <div class="d-grid">
-                                        <button type="submit" class="btn btn-primary" id="updateBtn">
+                                        <button type="submit" class="btn btn-success" id="updateBtn">
                                             <span class="spinner-border spinner-border-sm d-none me-2" role="status"></span>
                                             💾 Update Profile
                                         </button>
